データベースの中身を画面上に表示

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,8 +20,8 @@
         <input type="submit" value="送信">
     </form>
 
-    {% for word in words %}
-    <p>{{word}}</p>
+    {% for onegai in all_onegai %}
+    <p>{{onegai.title}}：{{onegai.body}}（{{onegai.date}}）</p>
     {% endfor %}
 </body>
 </html>
