--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,14 @@
         <input type="submit" value="送信">
     </form>
 
+    <form action="/add" method="POST">
+        <input type="text" name="title" placeholder="title">
+        <input type="text" name="body" placeholder="body">
+        <input type="submit" value="追加">
+    </form>
+
+
+
     {% for onegai in all_onegai %}
     <p>{{onegai.title}}：{{onegai.body}}（{{onegai.date}}）</p>
     {% endfor %}
