--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ログイン画面</title>
+    <title>{{name}}</title>
 </head>
+<!-- 以下を追加 -->
+<a href="/logout">ログアウトする</a>
+<!-- 追加終わり -->
+
 <body>
     {% if name == "kiyokiyo" %}
     <h1>スペシャル{{name}}神社</h1>
@@ -15,32 +17,26 @@
     <h1>ただの神社</h1>
     {% endif %}
 
-    <form action="/index" method="POST">
-        <input type="text" name="name" placeholder="神社の名前を入力してください">
-        <input type="submit" value="送信">
-    </form>
-
-    <form action="/add" method="POST">
+    <form action="/add" method="post">
         <input type="text" name="title" placeholder="title">
         <input type="text" name="body" placeholder="body">
         <input type="submit" value="追加">
     </form>
-
-    <form action="/update" method="POST" id='update'>
+    <form action="/update" method="post" id="update">
         <input type="text" name="title" placeholder="title">
         <input type="text" name="body" placeholder="body">
         <input type="submit" value="更新">
     </form>
-
-    <form action="/delete" method="POST" id='delete'>
+    <form action="/delete" method="post" id="delete">
         <input type="submit" value="選んだものを削除">
     </form>
     {% for onegai in all_onegai %}
     <div>
         <input type="radio" name="update" form="update" value={{onegai.id}}>
-        <input type="checkbox" name="delete" form="delete" value={{onegai.id}}>{{onegai.title}}：{{onegai.body}}（{{onegai.date}}）
+        <input type="checkbox" name="delete" form="delete" value={{onegai.id}}>
+        {{onegai.title}}：{{onegai.body}}（{{onegai.date}}）
     </div>
     {% endfor %}
-
 </body>
+
 </html>
