--- a/app/templates/newcomer.html
+++ b/app/templates/newcomer.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Registar</title>
-</head>
-
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1>新規登録</h1>
     <a href="/top">ログイン画面に戻る</a>
     {% if status == "exist_user" %}
@@ -16,6 +10,4 @@
         <input type="password" name="password" placeholder="password">
         <input type="submit" value="新規登録">
     </form>
-</body>
-
-</html>
+{% endblock %}
