--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1>ログイン</h1>
     {% if status == "user_notfound" %}
     <p>ユーザが見つかりません。新規登録しましょう。</p>
@@ -20,6 +14,4 @@
         <input type="submit" value="Login">
     </form>
     <a href="/newcomer">新規登録はこちら</a>
-</body>
-
-</html>
+{% endblock %}
