--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang='ja'>
     <head>
         <meta charset="UTF-8">
-        <title>変数入れたい</title>
+        <title>{{title_name}}</title>
     </head>
     <body>
         {% block content %}
