indexに登録したユーザを表示 + リポジトリ名の変更

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,4 +29,10 @@
         {{onegai.title}}：{{onegai.body}}（{{onegai.date}}）
     </div>
     {% endfor %}
+    <p>下は登録されてるユーザー名</p>
+    {% for user in all_user %}
+    <div>
+        ユーザー名{{user.user_name}}
+    </div>
+    {% endfor %}
 {% endblock %}
