--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,34 +1,27 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "base.html" %}
+{% block body %}
     <a href="/logout">ログアウトする</a>
-    {% if name == "kiyokiyo" %}
-    <h1>スペシャル{{name}}神社</h1>
-    {% elif name %}
-    <h1>{{name}}神社</h1>
-    {% else %}
-    <h1>ただの神社</h1>
-    {% endif %}
 
-    <form action="/add" method="post">
-        <input type="text" name="title" placeholder="title">
-        <input type="text" name="body" placeholder="body">
-        <input type="submit" value="追加">
-    </form>
-    <form action="/update" method="post" id="update">
-        <input type="text" name="title" placeholder="title">
-        <input type="text" name="body" placeholder="body">
-        <input type="submit" value="更新">
-    </form>
-    <form action="/delete" method="post" id="delete">
-        <input type="submit" value="選んだものを削除">
-    </form>
-    {% for onegai in all_onegai %}
-    <div>
-        <input type="radio" name="update" form="update" value={{onegai.id}}>
-        <input type="checkbox" name="delete" form="delete" value={{onegai.id}}>
-        {{onegai.title}}：{{onegai.body}}（{{onegai.date}}）
+    
+
+    <a class="btn btn-info btn-lg m-5" href="/create" role='button' style="color: black;">CREATE NEW TASK</a>
+    {% for post in posts %}
+    <div class="card w-50 mb-3" style="margin: auto;">
+        <div class="card-body">
+            {% if post.due.date() < today %} <div class="alert alert-warning" role="alert">期限切れです！
+        </div>
+        {% endif %}
+        <h2 class="card-title">タイトル：{{post.title}}</h2>
+        <p>期限：{{post.due.date()}}</p>
+        <a class="btn btn-secondary btn-sm" href="detail/{{ post.id }}" role='button'>Detail</a>
+        <a class="btn btn-success btn-sm" href="update/{{ post.id }}" role='button'>Update</a>
+        <a class="btn btn-danger btn-sm" href="delete/{{ post.id }}" role='button'>delete</a>
     </div>
+    </div>
+    
     {% endfor %}
+
+
     <p>下は登録されてるユーザー名</p>
     {% for user in all_user %}
     <div>
