Todoアプリの追加完了

--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -6,7 +6,7 @@
         <h2 class="card-title">{{post.title}}期限：{{post.due.date()}}</h2>
         <p>{{post.detail}}</p>
         <a href="/" class="btn btn-outline-success" role='button'>Return</a>
-        <a class="btn btn-success" href="update/{{ post.id }}" role='button'>Update</a>
+        <a class="btn btn-success" href="/update/{{ post.id }}" role='button'>Update</a>
     </div>
 </div>
 {% endblock %}
