--- a/app/templates/newcomer.html
+++ b/app/templates/newcomer.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "base.html" %}
+{% block body %}
     <h1>新規登録</h1>
     <a href="/top">ログイン画面に戻る</a>
     {% if status == "exist_user" %}
