--- a/app/templates/newcomer.html
+++ b/app/templates/newcomer.html
@@ -1,13 +1,22 @@
 {% extends "base.html" %}
 {% block body %}
-    <h1>新規登録</h1>
-    <a href="/top">ログイン画面に戻る</a>
+    <div class="background"></div>
+    <div class="card center" style="width: 500px;">
+        <div class="card-body">
+            <h1 class='card-title'>新規登録</h1>
+            <form action="/registar" method="post">
+                <label for="exampleInputEmail1" class="form-label">ユーザ名</label>
+                <input type="text" class='form-control' name="user_name" placeholder="user_name">
+                <label for="exampleInputPassword1" class="form-label">パスワード</label>
+                <input type="password" class='form-control' name="password" placeholder="password">
+                <input type="submit" class='btn btn-primary' value="新規登録">
+            </form>
+            <a href="/top">ログイン画面に戻る</a>
+        </div>
+    </div>
+
     {% if status == "exist_user" %}
     <p>そのユーザは既に登録されています。</p>
     {% endif %}
-    <form action="/registar" method="post">
-        <input type="text" name="user_name" placeholder="user name">
-        <input type="password" name="password" placeholder="password">
-        <input type="submit" value="新規登録">
-    </form>
+    
 {% endblock %}
