--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block head%}
-<link rel="stylesheet" href="../static/css/index.css">
+<link rel="stylesheet" href="../static/css/index_detail.css">
 {% endblock %}
 {% block body %}
-    <nav class='nav_bar'>
-        <a href="/logout" class="btn">ログアウトする</a>
+    <nav class="nav_bar">
+        <p class="m-3">ユーザ名：{{name}} 様</p>
+        <a href="/logout" class="btn btn-dark btn_logout p-3">ログアウトする</a>
     </nav>
 
-    
-    <a class="btn btn-info btn-lg m-5" href="/create" role='button' style="color: black;">CREATE NEW TASK</a>
+    <a class="btn btn-primary btn-lg m-5" href="/create" role='button' style="color: black;">CREATE NEW TASK</a>
 
     
     
@@ -30,10 +30,10 @@
     {% endfor %}
 
 
-    <p>下は登録されてるユーザー名</p>
+    <p class="text-center">~~~登録されてるユーザー名~~~</p>
     {% for user in all_user %}
-    <div>
-        ユーザー名{{user.user_name}}
+    <div class="text-center">
+        {{user.user_name}} 様
     </div>
     {% endfor %}
 {% endblock %}
