--- a/app/templates/newcomer.html
+++ b/app/templates/newcomer.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block head %}
+<link rel="stylesheet" href="../static/css/top_newcomer.css">
+{% endblock %}
 {% block body %}
     <div class="background"></div>
     <div class="card center" style="width: 500px;">
