--- a/app/templates/newcomer.html
+++ b/app/templates/newcomer.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
     <div class="background"></div>
-    <div class="card center" style="width: 500px;">
+    <div class="card center col-11 col-sm-6">
         <div class="card-body">
             <h1 class='card-title'>新規登録</h1>
             <form action="/registar" method="post">
