--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -3,15 +3,15 @@
 
 <form class='m-5' action="/index" method='POST'>
     <div class="pb-3">
-        <label for="title" class="form-label">Title</label>
+        <label for="title" class="form-label">タイトル</label>
         <input type="text" class="form-control" name='title'>
     </div>
     <div class="pd-3">
-        <label class="form-label" for="detail">Detail</label>
+        <label class="form-label" for="detail">詳細</label>
         <input type="text" class="form-control" name='detail'>
     </div>
     <div class="form-group mb-3">
-        <label for="due">Due</label>
+        <label for="due">期限</label>
         <input type="date" class="form-control" name='due' required>
     </div>
     <a href="/index" class="btn btn-outline-primary" role='button'>Return</a>
