--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -14,7 +14,7 @@
         <label for="due">期限</label>
         <input type="date" class="form-control" name='due' required>
     </div>
-    <a href="/index" class="btn btn-outline-primary" role='button'>Return</a>
-    <button type="submit" class="btn btn-primary">Create</button>
+    <a href="/index" class="btn btn-outline-primary" role='button'>戻る</a>
+    <button type="submit" class="btn btn-primary">作成</button>
 </form>
 {% endblock %}
